frontend/src/Components/Statistics/HorizontalServiceButtons.css
.horizontal-container {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  color: black;
}

.service-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 2.5vh auto;
  width: 100%;
}

.row-item {
  width: 150px;
  height: 100px;
  background-color: #fff;
  margin: 2.5vh 10px;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 15px;
  cursor: pointer;
  box-shadow: 2px 0 10px -2px lightgray;
  transition: background-color 0.4s ease;
}

.row-item img {
  width: 50px;
  margin: 5px auto;
}

.row-item p {
  color: black;
  margin: 5px auto;
}

.active-btn {
  background-color: #d1e9d2;
}

.row-item:hover {
  background-color: #d1e9d2;
}

@media only screen and (max-width: 1007px) {
  .horizontal-container {
    overflow-x: scroll;
    margin: 0 auto;
    scroll-behavior: smooth;
  }

  .service-row {
    width: fit-content;
  }

  .row-item {
    width: 100px;
    border-radius: 10px;
    font-size: 14px;
    margin: 5px 10px;
  }

  .row-item img {
    width: 40px;
  }

  .horizontal-container::-webkit-scrollbar {
    display: none;
  }
}

@media only screen and (max-width: 640px) {
  .horizontal-container {
    width: 100%;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .horizontal-container::-webkit-scrollbar {
    display: none;
  }

  .row-item {
    width: 100px;
    margin: 0 10px;
  }
}

